0028093: Visualization - access violation on removal of dynamic highlighting after device loss

OpenGl_Layer::Remove() now tries to remove object from myAlwaysRenderedMap
if it was not removed from other groups.